--- a/fxs-platform-web/src/main/resources/templates/addFalltypus.html
+++ b/fxs-platform-web/src/main/resources/templates/addFalltypus.html
@@ -1,79 +1,79 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/header :: header-css"></head>
+<head th:replace="fragments/admin-header :: admin-header-css"></head>
 <body>
-	<div class="topBar col-md-12">
-		<div th:replace="fragments/header :: header"></div>
-	</div>
-	<div class="mainPart">
-		<div class="container-fluid">
-			<div class="row" style="margin-top: 10%">
-				<div class="col-md-3"></div>
-				<div class="col-md-6" style="border: 1px solid; background-color: #ffffff">
-					<form role="form" style="padding: 10px">
-						<div class="signupTitle">
-							<h3 align="center">添加父案件类型</h3>
-						</div>
-						<div class="form-group">
-							<label>输入案件类型</label>
-							<input type="text" class="form-control" id="parentType" />
-						</div>
-						<div class="clear-fix"></div>
-						<a type="button" class="btn btn-primary" href="/falltypus/create/sub">创建子案件类型</a>
-						<button type="button" id="addParentLevel" class="btn btn-primary">保存案件类型</button>
-					</form>
+	<div class="skin-blu skin-admin">
+		<header th:replace="fragments/admin-header :: admin-header"></header>
+		<aside th:replace="fragments/admin-nav-bar :: admin-nav-bar"></aside>
+		<div class="content-wrapper" style="padding-top: 5%">
+			<div class="menu-content" style="overflow-y: auto; max-width: 860px; margin: 0 auto;">
+				<div class="box box-primary p-3" style="min-height: 300px;">
+					<div class="create-case-parent" style="">
+						<h5 class="text-center">添加父案件类型</h5>
+						<form>
+							<div class="form-group">
+								<label for="parentType">输入案件类型</label>
+								<input type="text" class="form-control" id="parentType" placeholder="输入案件类型" />
+							</div>
+							<div class="form-group">
+								<a role="button" class="btn btn-law" href="/falltypus/create/sub">创建子案件类型</a>
+								<button role="button" id="addParentLevel" class="btn btn-law">保存案件类型</button>
+							</div>
+						</form>
+					</div>
 				</div>
-				<div class="col-md-3"></div>
 			</div>
 		</div>
 		<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
-		    <div class="modal-dialog">
-		        <div class="modal-content">
-		            <div class="modal-header">
-		                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		                <h4 class="modal-title">提示信息</h4>
-		            </div>
-		            <div class="modal-body" id="modalContent"></div>
-		            <div class="modal-footer">
-		                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-		            </div>
-		        </div>
-		    </div>
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title">提示信息</h4>
+					</div>
+					<div class="modal-body" id="modalContent"></div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div th:replace="fragments/footer :: footer" ></div>
+	<div th:replace="fragments/footer :: footer"></div>
 	<script type="text/javascript">
-	$(document).ready(function() {
-		$("#addParentLevel").on("click", function() {
-			var type = $("#parentType").val()
-			
-			if($.trim(type) == '') {
-				$("#modalContent").empty().append("案件类型不能为空")
-				$("#notificationModal").modal("show")
-				return false
-			}
-			
-			$.ajax({
-				type : 'POST',
-				url : '/public/falltypus',
-				data : JSON.stringify({"name": type}),
-				contentType : "application/json; charset=utf-8",
-				success : function(data) {
-					$("#modalContent").empty().append("案件类型添加成功")
+		$(document).ready(function() {
+			$("#addParentLevel").on("click", function() {
+				var type = $("#parentType").val()
+
+				if ($.trim(type) == '') {
+					$("#modalContent").empty().append("案件类型不能为空")
 					$("#notificationModal").modal("show")
-				},
-				error : function(error) {
-					$("#modalContent").empty().append("案件类型添加失败")
-					$("#notificationModal").modal("show")
+					return false
 				}
-			});
-		})
-		
-		$('#notificationModal').on('hidden.bs.modal', function () {
-			$("#parentType").val("")
-		})
-	});
+
+				$.ajax({
+					type : 'POST',
+					url : '/public/falltypus',
+					data : JSON.stringify({
+						"name" : type
+					}),
+					contentType : "application/json; charset=utf-8",
+					success : function(data) {
+						$("#modalContent").empty().append("案件类型添加成功")
+						$("#notificationModal").modal("show")
+					},
+					error : function(error) {
+						$("#modalContent").empty().append("案件类型添加失败")
+						$("#notificationModal").modal("show")
+					}
+				});
+			})
+
+			$('#notificationModal').on('hidden.bs.modal', function() {
+				$("#parentType").val("")
+			})
+		});
 	</script>
 </body>
 </html>
