--- a/fxs-platform-web/src/main/resources/templates/public_add_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_add_dispute_info.html
@@ -1,105 +1,129 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/header :: header-css"></head>
+<head th:replace="fragments/admin-header :: admin-header-css"></head>
 <body>
-	<div class="topBar col-md-12">
-		<div th:replace="fragments/header :: header"></div>
-	</div>
-	<div class="mainPart">
-		<div class="container-fluid">
-			<table  bgcolor="#F1D4B8" width="1000" height="600" align="center" 
-					style="border-collapse: collapse;" border="1" bordercolor="#006699" >
-				<tr>
-					<td align="center"><h3>创建基本纷争信息</h3></td>
-				</tr>
-				<tr valign="top" align="center">
-    				<td align="center">
- 						<form th:action="@{/disputeInfo/createDisputeInfo}" th:method="post" th:object="${disputeInfo}">
-							<table width="700" style="border-collapse: collapse;" border="0" bordercolor="#006699" 
-								cellspacing="2" cellpadding="2">				
-								<tr id='TextBoxesGroups'>			
-									<td id='TextBoxesGroup'>				
-										<div >
-											<div id="TextBoxDiv1">
-												问题 #1 :
-												<input type="text" size="50" th:field="*{question}" />
-												<br /><br />
-												是否是基本问题？
-												<input type="radio" th:name="isBasicQuestion" th:value="Y" th:text="是" cols="29" rows="3" />
-												<input type="radio" th:name="isBasicQuestion" th:value="N" th:text="否" cols="29" rows="3" />
-												<br /><br />
-												是否选为根问题？
-												<input type="radio" th:value="Y" th:text="是" cols="29" rows="3" th:field="*{isRootQuestion}" />
-												<input type="radio" th:value="N" th:text="否" cols="29" rows="3" th:field="*{isRootQuestion}" />
-												<br /><br />
-												问题类型？
-												<input type="radio" th:value="0" th:text="单选" cols="29" rows="3" th:field="*{questionType}" />
-												<input type="radio" th:value="1" th:text="多选" cols="29" rows="3" th:field="*{questionType}" />
-												<input type="radio" th:value="2" th:text="文本输入" cols="29" rows="3" th:field="*{questionType}" />
-												<br /><br />
-												答案 #1 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer1' size="50"/>
-												<br /><br />
-												答案 #2 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer2' size="50"/>
-												<br /><br />
-												答案 #3 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer3' size="50"/>
-												<br /><br />
-												答案 #4 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer4' size="50"/>
-												<br /><br />
-												答案 #5 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer5' size="50"/>
-												<br /><br />
-												答案 #6 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer6' size="50"/>
-												<br /><br />
-												答案 #7 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer7' size="50"/>
-												<br /><br />
-												答案 #8 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer8' size="50"/>
-												<br /><br />
-												答案 #9 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer9' size="50"/>
-												<br /><br />
-												答案 #10 : &nbsp; 
-												<input type="text" th:field="*{answer}" id='answer10' size="50"/>
-											</div>
+	<div class="skin-blu skin-admin">
+		<header th:replace="fragments/admin-header :: admin-header"></header>
+		<aside th:replace="fragments/admin-nav-bar :: admin-nav-bar"></aside>
+		<div class="content-wrapper" style="padding-top: 5%">
+			<div class="menu-content" style="overflow-y: auto; max-width: 860px; margin: 0 auto;">
+				<div class="box box-primary p-3" style="min-height: 300px;">
+					<div class="all-case-info-detail">
+						<div class="small-wrap">
+							<h5 class="text-center">创建基本纷争信息</h5>
+							<form th:action="@{/disputeInfo/createDisputeInfo}" th:method="post" th:object="${disputeInfo}">
+								<div class="form-group row">
+									<label for="" class="col-sm-4 col-form-label">问题 #1 :</label>
+									<div class="col-sm-8">
+										<input type="text" class="form-control" th:field="*{question}" />
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="" class="col-sm-4 col-form-label">是否是基本问题？</label>
+									<div class="col-sm-8 pt-1">
+										<label class="radio-inline">
+											<input type="radio" th:name="isBasicQuestion" th:value="Y" th:text="是" />
+										</label> 
+										<label class="radio-inline">
+											<input type="radio" th:name="isBasicQuestion" th:value="N" th:text="否" />
+										</label>
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="" class="col-sm-4 col-form-label">是否选为根问题？</label>
+									<div class="col-sm-8 pt-1">
+										<label class="radio-inline">
+											<input type="radio" th:value="Y" th:text="是" th:field="*{isRootQuestion}" />
+										</label>
+										<label class="radio-inline">
+											<input type="radio" th:value="N" th:text="否" th:field="*{isRootQuestion}" />
+										</label>
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="" class="col-sm-4 col-form-label">问题类型？</label>
+									<div class="col-sm-8 pt-1">
+										<label class="radio-inline">
+											<input type="radio" th:value="0" th:text="单选" th:field="*{questionType}" />
+										</label>
+										<label class="radio-inline">
+											<input type="radio" th:value="1" th:text="多选" th:field="*{questionType}" />
+										</label>
+										<label class="radio-inline">
+											<input type="radio" th:value="2" th:text="文本输入" th:field="*{questionType}" />
+										</label>
+									</div>
+								</div>
+								<div class="answer-wrap">
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label">答案 #1 :</label>
+										<div class="col-sm-8">
+											<input class="form-control" type="text" th:field="*{answer}" id='answer1' />
 										</div>
-									</td>
-								</tr>
-								<tr>
-									<td colspan="3" align="center">
-										<input type="submit" name="" value="保存" />&nbsp;&nbsp;
-										<input type="reset" name="" value="重置" />&nbsp;&nbsp;
-										<a type="button" th:href="@{/disputeInfo/getAllDisputeInfo}">返回</a>
-									</td>
-								</tr>					
-							</table>			
-						</form>
-    				</td>    
-  				</tr>
-			</table>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label">答案 #2 :</label>
+										<div class="col-sm-8">
+											<input class="form-control" type="text" th:field="*{answer}" id='answer2' />
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label">答案 #3 :</label>
+										<div class="col-sm-8">
+											<input class="form-control" type="text" th:field="*{answer}" id='answer3' />
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label">答案 #4 :</label>
+										<div class="col-sm-8">
+											<input class="form-control" type="text" th:field="*{answer}" id='answer4' />
+										</div>
+									</div>
+								</div>
+								<div class="form-group row">
+									<div class="col-sm-12">
+										<button class="btn btn-law btn-sm" type="button" id="addAnswer">添加答案</button>
+									</div>
+								</div>
+								<div class="form-group row">
+									<div class="col-sm-12 text-center">
+										<button class="btn btn-law btn-sm" type="submit" id="">保存</button>
+										<button class="btn btn-law btn-sm" type="reset" id="">重置</button>
+										<a role="button" class="btn btn-outline-dark btn-sm" th:href="@{/disputeInfo/getAllDisputeInfo}" id="">返回</a>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div th:replace="fragments/footer :: footer" ></div>
+	<div th:replace="fragments/footer :: footer"></div>
 	<script type="text/javascript">
-	$(function() {
-		$("#addButton").on("click", () => {
-			$("#TextBoxesGroups").append($("#TextBoxesGroup").html())
+		$(function() {
+			$("input[type='radio'][name='isBasicQuestion']").on("click", function() {
+				$("input[name='isRootQuestion']").prop("checked", false)
+				if($(this).val() === 'Y') {
+					$("input[name='questionType']").prop("checked", false).attr("disabled", "disabled")
+				} else {
+					$("input[name='questionType']").removeAttr("disabled")
+				}
+			})
+			
+			$("#addAnswer").click(function(){
+	            var lastAnswer = $(".answer-wrap .form-group.row:last");
+	            var number = parseInt(lastAnswer.find('input').attr("id").split('answer')[1]);
+	            if (number >= 10) {
+	              return
+	            }
+	            var addedNode = lastAnswer.clone();
+	            addedNode.find("label").html("答案 #" + (number+1) + " :");
+	            addedNode.find("input").attr("id","answer"+(number+1)).attr("name", "answer");
+	            $(".answer-wrap").append(addedNode)
+	        });
 		})
-		
-		$("input[type='radio'][name='isBasicQuestion']").on("click", function() {
-			if($(this).val() === 'Y') {
-				$("input[name='questionType']").prop("checked", false).attr("disabled", "disabled")
-			} else {
-				$("input[name='questionType']").removeAttr("disabled")
-			}
-		})
-	})
 	</script>
 </body>
 </html>
