修复静态页面引用

--- a/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
@@ -9,7 +9,7 @@
 	<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <header class="admin-header fixed-top d-flex align-items-center" th:fragment="admin-header">
-	<a href="admin.html" class="logo mr-auto">
+	<a href="/user/dashboard" class="logo mr-auto">
 		<span class="logo-lg"><b>管理后台</b></span>
 	</a>
 	<ul class="nav justify-content-end admin-right">
