--- a/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
@@ -9,9 +9,9 @@
 			<div class="col-md-12 lawsuit-content" >
 				<h3 class="heading">海量免费资源 不成功委托不收费</h3>
 				<p >用专业势力赢得案例</p>
-				<a href="laywer_login.html" class="create-an-account" >律师登录</a>
+				<a href="#" class="create-an-account" >律师登录</a>
 				&nbsp;&nbsp;
-				<a href="laywer_sign_page.html" class="create-an-account" >律师注册</a>
+				<a href="#" class="create-an-account" >律师注册</a>
 			</div>
 		</div>
 	</div>
