--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="my.html">个人中心</a></li>
+					<li><a href="#">个人中心</a></li>
 					<li class="active">我的免费咨询</li>
 				</ol>
 				<h1 class="blue">我的免费咨询 (2)</h1>
