--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="counseling_free.html">免费法律咨询</a></li>
+					<li><a href="#">免费法律咨询</a></li>
 					<li class="active">填写纠纷基本信息</li>
 				</ol>
 				<h1 class="blue step1">填写纠纷基本信息</h1>
