--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
@@ -10,8 +10,8 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="lawsuit_step1.html">选择类型</a></li>
-					<li><a href="lawsuit_step1.html">房屋买卖、房屋租赁、动拆迁</a></li>
+					<li><a href="#">选择类型</a></li>
+					<li><a href="#">房屋买卖、房屋租赁、动拆迁</a></li>
 					<li class="active">填写信息</li>
 				</ol>
 				<div style="margin-left: 150px; margin-right: 150px">
