--- a/fxs-platform-web/src/main/resources/templates/fragments/header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/header.html
@@ -55,7 +55,7 @@
 					<a class="nav-link" th:href="@{/}">首页</a>
 				</li>
 				<li class="dropdown">
-					<a href="counseling_free.html" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">法律咨询</a>
+					<a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">法律咨询</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" th:href="@{/public/case/consulting/free}">免费法律咨询</a>
 						<div class="dropdown-divider"></div>
