--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="laywer_center.html">待加入竞标</a></li>
+					<li><a href="#">待加入竞标</a></li>
 					<li class="active">
 						<span>案件</span>
 						<span th:text="${caseDetailInfo.id}"></span>
