--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -10,8 +10,8 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="my.html">个人中心</a></li>
-					<li><a href="my_freelist.html">我的免费咨询</a></li>
+					<li><a href="#">个人中心</a></li>
+					<li><a href="#">我的免费咨询</a></li>
 					<li class="active">问题详情</li>
 				</ol>
 				<h1 class="blue">我的问题</h1>
