--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
@@ -10,7 +10,7 @@
 		<div class="container">
 			<div class="containerWapper">
 				<ol class="breadcrumb">
-					<li><a href="my.html">个人中心</a></li>
+					<li><a href="#">个人中心</a></li>
 					<li class="active">我的竞标案件</li>
 				</ol>
 				<h1 class="blue">诉讼案件详情</h1>
