--- a/fxs-platform-web/src/main/resources/templates/levelTwoFalltypusList.html
+++ b/fxs-platform-web/src/main/resources/templates/levelTwoFalltypusList.html
@@ -11,8 +11,8 @@
 				<div class="box box-primary p-3" style="min-height: 300px;">
 					<div class="level-two-data" style="">
 						<div class="row mx-0">
+							<h5>二级案件类型</h5>
 							<div class="table-wrap w-100 scroll-y scroll-y-400">
-								<span><b>二级案件类型</b></span>
 								<table class="table table-sm table-bordered">
 									<thead class="thead-light">
 										<tr>
